[package]
name = "tun2tor"
version = "0.1.0"
authors = ["Conrad Kramer <conrad@kramerapps.com>"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10", default-features = false }
error-chain = { version = "0.12", default-features = false }
log = "0.4"
android_logger = "0.5"

[lib]
crate-type = ["dylib"]

[dependencies]
byteorder = "1.2"
futures = "0.1"
libc = "0.2"
lwip = { path = "lwip" }
log = "0.3"
mio = "0.6"
nix = "0.9"
tokio-core = "0.1"
tokio-io = "0.1"
